# mcp-server-s3

./: README.md  env.example  pyproject.toml  run.sh
src/s3_mcp_server/: server.py
src/s3_mcp_server/resources/: s3_resource.py
